# DiscordBot

./: .env  .gitignore  Cargo.toml  Containerfile  Dockerfile  README.md  bot.py  events.json  flake.nix  wrangler.toml
.github/workflows/: python-app.yml
cogs/: events_timer.py  upload_timer.py
register/: Cargo.toml
register/src/: main.rs
src/: lib.rs  world_clock.rs  youtube_upload_timer.rs
