[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["register"]

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
icu = { version = "2.0.0", features = ["experimental"] }
js-sys = "0.3.77"
serde_json = "1.0.142"
time = "0.3.41"
url = "2.5.4"
worker = "0.6.1"

[dependencies.serenity]
git = "https://github.com/Shiphan/serenity.git"
branch = "next"
default-features = false
features = ["wasm_builder", "interactions_endpoint"]
