[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["register"]

[dependencies]
chrono = "0.4.44"
chrono-tz = { version = "0.10.4", features = ["serde"] }
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
icu = { git = "https://github.com/Shiphan/icu4x.git", features = ["unstable"] }
icu_datetime = { git = "https://github.com/Shiphan/icu4x.git", features = ["chrono_0_4"] }
itertools = "0.14.0"
js-sys = "0.3.77"
serde = "1.0.228"
serde_json = "1.0.142"
time = "0.3.41"
url = "2.5.4"
worker = "0.7.5"
writeable = { git =  "https://github.com/Shiphan/icu4x.git" }

[dependencies.serenity]
git = "https://github.com/Shiphan/serenity.git"
branch = "next"
default-features = false
features = ["wasm_builder", "interactions_endpoint"]
